# MLOps-NWDAF-V2

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.mlflow.yml  docker-compose.monitoring.yml  docker-compose.yml  dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: cd-pipeline.yml  ci.yml  retrain.yml
data/: raw_ebs.dvc
docs/: HANDOFF.md  IMPLEMENTATION_PLAN.md  THESIS_SPEC.md
docs/plans/: 2026-06-07-phase0-scaffold.md  2026-06-07-phase1-ingestion.md  2026-06-07-phase2-synthetic.md  2026-06-07-phase3-features-feast.md  2026-06-07-phase4-training-mlflow.md  2026-06-08-phase5-serving.md  2026-06-08-phase6-monitoring.md  2026-06-08-phase7-cicd.md  2026-06-09-phase8a-foundation.md  2026-06-09-phase8b1-rq3.md  2026-06-09-phase8b2-rq4.md
docs/research/: METHODOLOGY_GROUNDING.md
docs/results/: phase8b1_tables.md  phase8b2_tables.md
docs/runbooks/: phase7-infra.md
grafana/dashboards/: nwdaf-ops.json
prometheus/: prometheus.yml
src/cicd/: __init__.py  __main__.py  cli.py  eval_gate.py  fixture.py  schema.py
src/data/: ebs_generator.py  generate_datasets.py  real_profile.py  synthetic_generator.py
src/experiments/: __init__.py  __main__.py  cli.py  exp1_e2e.py  exp2_ablation.py  exp3_framework.py  exp4_drift.py  exp5_model_swap.py  exp6_modifiability.py  exp_common.py  maturity.py  mltest_manifest.yaml  records.py  runner.py  schema.py  stats.py  tables.py
src/features/: __main__.py  builder.py  cli.py  feast_store.py  quality.py  schema.py  weak_labels.py
src/ingestion/: __main__.py  cli.py  (+4 more)
tests/: test_smoke.py
(+124 files in other folders)
