[project]
name = "nwdaf-mlops"
version = "0.1.0"
description = "MLOps pipeline for 5G NWDAF ping-pong handover anomaly detection"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0", "pandas>=2.2", "pyarrow>=18", "scipy>=1.14",
  "scikit-learn>=1.6", "joblib>=1.4",
  "mlflow>=2.18", "evidently>=0.4", "dvc[s3]>=3.55",
  "fastapi>=0.115", "uvicorn[standard]>=0.34", "pydantic>=2.10",
  "prometheus-client>=0.21", "psutil>=6.1", "python-dotenv>=1.0",
]
[project.optional-dependencies]
feast = ["feast>=0.40"]
lstm = ["torch>=2.6"]
clearml = ["clearml>=1.16"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "pre-commit>=3.8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
